# check.webring.ooo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  catchup.md  docker-compose.yml  netlify.toml
backend/: Makefile  app.py  export_cache_to_csv.py  names.csv  pyproject.toml  redis_client.py  refresh_domain_information.py  test_check_endpoint.py  test_domains.py  test_names.py
backend/data/: 3_letter_combos.csv  cached_domains.csv  cached_domains_2025-06-12-17-00.csv  cached_domains_2025-06-12-19-52.csv  default_names_83k.csv  three_letter_domains.csv  three_letter_name_domains.csv
backend/notebooks/: explore_available_domains.ipynb  explore_names_dataset.ipynb
docs/: deployment.md  requirements.md
docs/adr/: 001-tech-stack-selection.md  002-progressive-data-loading-strategy.md  003-names-dataset-integration.md  004-containerization-strategy.md  005-redis-caching.md
frontend/: .prettierrc  Dockerfile  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.svelte  app.css  domains.csv  main.js
frontend/src/routes/: +layout.svelte  +page.svelte
