[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "names-dataset>=3.3.1",
    "uvicorn>=0.34.3",
    "redis>=5.0.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.13",
]
